# api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6f21de80dbae_test.py  91e23a742129_test.py  f2a3338108fb_test.py
src/: main.py
src/api/: __init__.py  deps.py
src/api/auth/: __init__.py  endpoints.py  router.py
src/api/me/: __init__.py  endpoints.py  router.py
src/api/root/: __init__.py  health.py
src/api/subs/: __init__.py  endpoints.py  router.py
src/auth/: __init__.py  auth.py  token.py
src/core/: __init__.py  config.py  logger.py
src/db/: __init__.py  session.py
src/db/subs/: models.py  repo.py  schemas.py
src/db/users/: models.py  repo.py  schemas.py
